--- a/src/main/metadata-au/classes/RetailTaskHelper.cls
+++ b/src/main/metadata-au/classes/RetailTaskHelper.cls
@@ -188,7 +188,7 @@ public with sharing class RetailTaskHelper {
         if(fltCntrctList.size() > 0){
             // Get the fleet lead record type information
             RecordType fleetLdRT = [SELECT Id, Name FROM RecordType
-                                    WHERE Name = 'Fleet Lead'];
+                                    WHERE Name = 'Finance Fleet Lead'];
             if(fleetLdRT != null){
                 for(Retail_Task__c curCntrct : fltCntrctList){
                     Lead__c newLead = new Lead__c();
