--- a/src/main/metadata/classes/TriggerVehicleRelTriggerHandlerJP.cls
+++ b/src/main/metadata/classes/TriggerVehicleRelTriggerHandlerJP.cls
@@ -28,12 +28,12 @@ public class TriggerVehicleRelTriggerHandlerJP
         Map<Id,Vehicle_Relationship__c> newmap = (Map<Id,Vehicle_Relationship__c>)trigger.newmap;
         Map<Id,Vehicle_Relationship__c> oldmapVehicleRelation = (Map<Id,Vehicle_Relationship__c>)Trigger.oldmap;
          // US-CP-007
-         if (trigger.isBefore && trigger.isInsert){
+        /* if (trigger.isBefore && trigger.isInsert){
                 vrHelperJP.validateOverlappingVehicleRelationshiponInsert(trigger.new);
-         }
-         if(trigger.isBefore && trigger.isUpdate){
+         }*/
+       /*  if(trigger.isBefore && trigger.isUpdate){
                 vrHelperJP.validateOverlappingVehicleRelationshiponUpdate(trigger.new,oldmapVehicleRelation);
-         }
+         }*/
        // Update Status , Update Vehicle Relationship and Create Account Link 
         
        if(trigger.isAfter && (trigger.isInsert))
@@ -56,12 +56,12 @@ public class TriggerVehicleRelTriggerHandlerJP
         Map<Id,Vehicle_Relationship__c> newmap = (Map<Id,Vehicle_Relationship__c>)trigger.newmap;
         Map<Id,Vehicle_Relationship__c> oldmapVehicleRelation = (Map<Id,Vehicle_Relationship__c>)Trigger.oldmap;
          // US-CP-007
-         if (trigger.isBefore && trigger.isInsert){
+        /* if (trigger.isBefore && trigger.isInsert){
                 vrHelperJP.validateOverlappingVehicleRelationshiponInsert(trigger.new);
          }
          if(trigger.isBefore && trigger.isUpdate){
                 vrHelperJP.validateOverlappingVehicleRelationshiponUpdate(trigger.new,oldmapVehicleRelation);
-         }
+         }*/
        // Update Status , Update Vehicle Relationship and Create Account Link     
       
         
