--- a/src/main/metadata-au/classes/TaskTriggerHandler.cls
+++ b/src/main/metadata-au/classes/TaskTriggerHandler.cls
@@ -27,7 +27,7 @@ public class TaskTriggerHandler
     
     public void handleTrigger()
     {
-	user obj=[select id,profileid,profile.Name from user where id=:userinfo.getuserid()];
+    user obj=[select id,profileid,profile.Name from user where id=:userinfo.getuserid()];
        /* if(trigger.isAfter && trigger.isInsert)
         {
           //todo commented: need to add trigger wsitching mechanism
@@ -72,9 +72,10 @@ public class TaskTriggerHandler
             TaskHelper.FillintheCampaignNameBasedontheRelatedtoObject(Trigger.new,(Map<Id,Task>)trigger.oldmap,trigger.isinsert,trigger.isupdate);*/
             //Existing AU functionality
             TaskTriggerHandler.au_Before_Insert_Update_Events(Trigger.new,trigger.isinsert,trigger.isupdate);
-			if(obj.profile.Name!='IntegrationAPI')
+            if(obj.profile.Name!='IntegrationAPI')
             TaskHelper.au_Before_Insert_Update_Events_Task(Trigger.new,trigger.isinsert,trigger.isupdate);
             TaskHelper.updateCommentWithTimeStamp(Trigger.new,trigger.isinsert,trigger.isupdate);
+            TaskHelper.validateAccount(Trigger.new,trigger.isinsert,trigger.isupdate);
         }
         if(trigger.isBefore && trigger.isUpdate)
         {
@@ -86,9 +87,10 @@ public class TaskTriggerHandler
             TaskHelper.FillintheCampaignNameBasedontheRelatedtoObject(Trigger.new,(Map<Id,Task>)trigger.oldmap,trigger.isinsert,trigger.isupdate);*/
             //Existing AU functionality
             TaskTriggerHandler.au_Before_Insert_Update_Events(Trigger.new,trigger.isinsert,trigger.isupdate);
-			if(obj.profile.Name!='IntegrationAPI')
+            if(obj.profile.Name!='IntegrationAPI')
             TaskHelper.au_Before_Insert_Update_Events_Task(Trigger.new,trigger.isinsert,trigger.isupdate);
             TaskHelper.updateCommentWithTimeStamp(Trigger.new,trigger.isinsert,trigger.isupdate);
+            TaskHelper.validateAccount(Trigger.new,trigger.isinsert,trigger.isupdate);
         }
     }
     
@@ -698,7 +700,7 @@ public class TaskTriggerHandler
                     task.Activity_Date__c=contracts.get(task.WhatId).EndDate__c;  
               }
           }
-		  }
+          }
       }
     }
     //existing au functionality ends here
