--- a/src/main/metadata-au/classes/TriggerLeadTriggerHandler.cls
+++ b/src/main/metadata-au/classes/TriggerLeadTriggerHandler.cls
@@ -34,6 +34,7 @@ public class TriggerLeadTriggerHandler
         LeadHelper.afterInsert_UpdateEvents(trigger.new,oldmap,trigger.isinsert,trigger.isUpdate);
         LeadHelper.ShareLeadsToCampaignUser(trigger.new,oldmap,trigger.NewMap,trigger.isinsert,trigger.isUpdate);*/
         LeadHelper.auAfter_Insert_Update_Events(trigger.new,newmap,oldmap,trigger.isinsert,trigger.isUpdate);
+        LeadHelper.emailNotificationsToAssignedDealer(trigger.new,newmap,oldmap,trigger.isinsert,trigger.isUpdate);
        // AuLeadHelper.auAfter_Insert_Update_Events(trigger.new,newmap,oldmap,trigger.isinsert,trigger.isUpdate);
     }
     if(trigger.isAfter && trigger.isUpdate)
@@ -42,6 +43,7 @@ public class TriggerLeadTriggerHandler
         /*LeadHelper.afterInsert_UpdateEvents(trigger.new,oldmap,trigger.isinsert,trigger.isUpdate);
         LeadHelper.ShareLeadsToCampaignUser(trigger.new,oldmap,newmap,trigger.isinsert,trigger.isUpdate);*/
         LeadHelper.auAfter_Insert_Update_Events(trigger.new,newmap,oldmap,trigger.isinsert,trigger.isUpdate);
+        LeadHelper.emailNotificationsToAssignedDealer(trigger.new,newmap,oldmap,trigger.isinsert,trigger.isUpdate);
         //AuLeadHelper.auAfter_Insert_Update_Events(trigger.new,newmap,oldmap,trigger.isinsert,trigger.isUpdate);
     }
     if(trigger.isBefore && trigger.isInsert)
