Changes as per SGDCAU-600

--- a/src/main/metadata-au/classes/AttachmentAfterTriggerHandler.cls
+++ b/src/main/metadata-au/classes/AttachmentAfterTriggerHandler.cls
@@ -16,6 +16,8 @@ public class AttachmentAfterTriggerHandler
 {
     public void handleTrigger()
     {
+        
+        If(trigger.isInsert && trigger.isAfter){
         List<id> caseIds = new List<id>();
     
         for(Attachment a : (List<Attachment>)trigger.new){
@@ -30,5 +32,71 @@ public class AttachmentAfterTriggerHandler
         if (caseIds.size()>0) {
             ComplaintDesHelper.sendMailToCaseMember(caseIds);
         }
+        }
+        
+        
+        If(trigger.isInsert && trigger.isAfter){
+            set<id> leadSet = new set<id>();
+            list<lead__c> leadList = new list<lead__c>();
+            
+            
+            for(Attachment a : (List<Attachment>)trigger.new){                
+                String parentIdString = String.valueof(a.parentId);
+                if(parentIdString.startsWith('a0s')){
+                   leadSet.add(a.ParentId);
+               }
+                
+                for(lead__c lead:[select id,Attachment_Flag__c from lead__c where id IN:leadSet]){
+                    lead.Attachment_Flag__c= true;
+                    leadList.add(lead);
+                }
+                
+                if(leadList!= null && !leadList.isEmpty()){
+                    try{
+                    update leadList;
+                    }catch(Exception e){
+
+                    }
+                }
+
+                
+                
+            }  
+            
+            
+        }
+        
+        If(trigger.isDelete && trigger.isAfter){
+            set<id> leadSet = new set<id>();
+            list<lead__c> leadList = new list<lead__c>();
+            
+            
+            for(Attachment a : (list<Attachment>)trigger.oldMap.Values()){                
+                String parentIdString = String.valueof(a.parentId);
+                if(parentIdString.startsWith('a0s')){
+                   leadSet.add(a.ParentId);
+               }
+                
+                for(lead__c lead:[select id,Attachment_Flag__c,(SELECT Id,Name FROM Attachments) from lead__c where id IN:leadSet]){
+                    system.debug('Attachments'+lead.Attachments);
+                    if(lead.Attachments.isEmpty()){
+                        system.debug('test1111111111111');
+                    lead.Attachment_Flag__c= false;
+                    leadList.add(lead);
+                    }
+                }
+                
+                if(leadList!= null && !leadList.isEmpty()){
+                   
+                    update leadList;
+                }
+
+                
+                
+            }  
+            
+            
+        }
+        
     }
 }
